      parse_boxofficemojo_exact=0
      parse_boxofficemojo_always=0
      new_news_announce_interval=3
      complete sections [http], [news] added/changed
      dbms=

    1. compare your slftp.ini with the provided one in /dist folder, many changes
    2. update your helpfiles with the provided one in /dist/help folder
    3. delete your old slftp.news file (if existing)
    4. delete your old stats.db file due to a wrong UNIQUE INDEX (if existing)
    5. if you have problems with resuing existing databases, delete all .db files

--===========================( KNOWN BUG in v1.5.* )================================-

    OpenSSL v1.1.* isn't supported yet
    Setting !maxupdn to 0 for upload/download leads to problems -> generating gillions of queued tasks
    Enable try to complete is unstable at the moment. It's recommended to set enable_try_to_complete=0

--=============================( SLFTP v1.5.6 )===================================-
 ** NOTE: FROM NOW ON YOU HAVE TO USE - Delphi 10.2.3 Tokyo or newer - ON WINDOWS! **
  ** NOTE: FROM NOW ON YOU HAVE TO USE UNRELEASED - FPC 3.2 or newer - ON LINUX! **
  
    {+} Blowfish CBC support (#124)
    {+} Box Office Mojo support
    {+} New HTTP Library (up to 50% faster) with Socks5 support
    {+} News System to store important messages to encrypted file. (#173, #164, #198)
    {+} Wildcard/Regex (Masks) support for kb_sectionhandlers (TTVRelease, TIMDBRelease, etc) (#147)
    {+} Wildcard/Regex (Masks) support for midnight sections
    {+} New !affils command.
    {+} Show a message when 0 byte file was detected on startup (#189)
    {+} !status and !uptime shows if you use 32/64-bit version of slftp and used compiler version
    {+} !lastlog command to show last log entries. (#160)
    {+} Avoid double race of release in different sections (#116)
    {+} Show a warn message if important files not found on startup
    {+} Show PID & actual memory usage in !status command (atm linux only!) (#170)